# demo-app

./: Dockerfile  README.md  devbox.json  pyproject.toml
.github/workflows/: ci.yml
deploy/: .gitignore  main.ts  package-lock.json  package.json  tsconfig.json
src/demo_app/: __init__.py
tests/: test_app.py
